--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/appsettings.json
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/appsettings.json
@@ -31,47 +31,53 @@
             "Title": "Column Types",
             "Icon": "images/GridColumnType.svg",
             "Keywords": "blazor, components, data grid, datagrid, grid, column type, columns, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Data Grid provides you with column objects to display and edit different data types: text, numbers, dates, and Boolean values."
+          },
+          {
+            "Url": "GridSortData",
+            "Title": "Sort Data",
+            "Keywords": "blazor, components, data grid, datagrid, grid, grid sort, grid sorting, datagrid sort, datagrid sorting, devexpress, demo, sample, example",
+            "Description": "DevExpress Blazor Data Grid supports sorting data against multiple columns. A column's current sort order is indicated by a sort glyph displayed in the column header."
           },
           {
             "Url": "GridTemplate",
             "Title": "Templates",
             "Icon": "images/GridTemplates.svg",
             "Keywords": "blazor, components, data grid, datagrid, grid, template, cell template, cell editor template, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Data Grid supports templates that allow you to customize cell appearance and visual layout of the edit form."
           },
           {
             "Url": "GridCascadingEditors",
             "Title": "Cascading Editors",
             "Icon": "images/GridCascadingEditors.svg",
             "Keywords": "blazor, components, data grid, datagrid, grid, cascade editors, cascading combobox, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Data Grid allows you to implement cascade logic within grid’s edit form using DevExpress ComboBox for Blazor components."
           },
           {
             "Url": "GridEditFormTemplateValidation",
             "Title": "Edit Form Validation",
             "Icon": "images/GridEditFormTemplate.svg",
             "Keywords": "blazor, components, data grid, datagrid, grid, template, form validation, form template, form template validation, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Data Grid allows you to implement a custom edit form with built-in data validation."
           },
           {
             "Url": "GridLargeDataBase",
             "Title": "Large Data Source",
             "Icon": "images/GridLargeData.svg",
             "Keywords": "blazor, components, data grid, datagrid, grid, data bind, data binding, entity framework bind, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Data Grid delivers high performance when the component is bound to a large data source."
           },
           {
             "Url": "GridScrolling",
             "Title": "Scrolling",
             "Keywords": "blazor, components, data grid, datagrid, grid, scrolling, vertical scrolling, horizontal scrolling, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Data Grid for Blazor displays a large amount of information thanks to vertical and horizontal scroll bars."
           },
           {
             "Url": "GridVirtualScrolling",
             "Title": "Virtual Scrolling",
             "Keywords": "blazor, components, data grid, datagrid, grid, virtual scrolling, horizontal scrolling, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Data Grid supports Virtual Scrolling. When Virtual Scrolling mode is activated, the grid loads new/additional data on demand when a user scrolls grid rows."
           }
         ]
       },
@@ -82,19 +88,48 @@
             "Url": "PivotGrid",
             "Title": "Overview",
             "Keywords": "Blazor, components, pivot grid, sorting, grouping, sub-totals, grand-totals, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Pivot Grid summarizes data from the underlying data source and presents the results in cross-tabulated format. "
           },
           {
             "Url": "PivotGridTemplates",
             "Title": "Templates",
             "Keywords": "Blazor, components, pivot grid, customization, cell templates, formatting, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Pivot Grid allows you to use native Razor markup to define custom templates for grid fields."
           },
           {
             "Url": "PivotGridLargeDataBase",
             "Title": "Large Data Source",
             "Keywords": "Blazor, components, pivot grid, data binding, entity framework bind, paging, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Pivot Grid delivers high performance when the component is bound to a large data source."
+          },
+          {
+            "Url": "PivotGridChartIntegration",
+            "Title": "Chart Integration",
+            "Keywords": "Blazor, components, pivot grid, charts, pivot grid and chart integration, data visualization, devexpress, demo, sample, example",
+            "Description": "The DevExpress Pivot Grid for Blazor can be easily integrated with DevExpress Charts for Blazor. This allows you to visualize grid's data on a chart."
+          }
+        ]
+      },
+      {
+        "Title": "Charts",
+        "DemoPages": [
+          {
+            "Url": "ChartSeriesTypes",
+            "Title": "Series Types",
+            "Keywords": "Blazor, components, charts, bar, line, area, bubble, series, devexpress, demo, sample, example",
+            "Description": "DevExpress Blazor Charts supports the following series types: Line, Area, Bar, and Bubble series."
+          },
+          {
+            "Url": "ChartDynamicSeries",
+            "Title": "Dynamic Series",
+            "Keywords": "Blazor, components, charts, dynamic series, series template, aggregation, grouping, devexpress, demo, sample, example",
+            "Description": "DevExpress Blazor Charts allows you to dynamically select data that matches the specified criterion from a data source and display chart series based on this data."
+          },
+          {
+            "Url": "ChartCustomization",
+            "Title": "Customization",
+            "Keywords": "Blazor, components, charts, customization, tooltips, legend, toggle series, multiple axes, devexpress, demo, sample, example",
+            "Description": "DevExpress Blazor Charts allows users to customize tooltips and legend items. Additionally, the component supports displaying charts with multiple axes that help to combine several charts. "
           }
         ]
       },
@@ -123,25 +158,25 @@
             "Title": "ComboBox",
             "IsUpdated": true,
             "Keywords": "Blazor, components, combo box, combobox, data binding, databinding, data source, virtual scrolling, scrolling, custom input, filtering, data filtering, incremental filtering, null text, nulltext, cascading lists,  devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor ComboBox is a drop-down list editor that supports virtual scrolling, incremental filtering, and cascade logic."
           },
           {
             "Url": "SpinEdit",
             "Title": "Spin Edit",
             "Keywords": "blazor, components, spinedit, spin edit, number editor, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Spin Edit allows the user to modify numeric data by typing a new value into the text box or by using the up/down spin buttons to increment/decrement the value."
           },
           {
             "Url": "DateEdit",
             "Title": "Date Edit",
             "Keywords": "blazor, components, date edit, dateedit, date, calendar, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Date Edit is a date editor with a drop-down calendar. The component allows you to enter a date into the text box or pick one from the drop-down window."
           },
           {
             "Url": "TextBox",
             "Title": "Text Box",
             "Keywords": "blazor, components, text box, textbox, memo, devexpress, demo, sample, example",
-            "Description": ""
+            "Description": "DevExpress Blazor Text Box is a single-line editor that enables a user to enter and edit text. The component also supports binding to a data source."
           }
         ]
       },
@@ -150,21 +185,21 @@
         "Title": "Form Layout",
         "Icon": "images/FormLayout.svg",
         "Keywords": "blazor, components, form, form editor, form layout, formlayout, devexpress, demo, sample, example",
-        "Description": ""
+        "Description": "DevExpress Blazor Form Layout allows you to construct responsive and automatically-aligned edit forms. Form Layout can group items, display UI elements in tabs. You can also bind the component to a data source."
       },
       {
         "Url": "FormValidation",
         "Title": "Form Validation",
         "Icon": "images/GridColumnType.svg",
         "Keywords": "blazor, components, form, form validation, data validation, devexpress, demo, sample, example",
-        "Description": ""
+        "Description": "The DevExpress UI components for Blazor support the built-in form validation. You can validate DevExpress Blazor data editors, Form Layout, or  your custom edit form."
       },
       {
         "Url": "Tabs",
         "Title": "Tabs",
         "Icon": "images/Tabs.svg",
         "Keywords": "blazor, components, tab, tabs, tabcontrol, tab control, pagecontrol, page control, page component, devexpress, demo, sample, example",
-        "Description": ""
+        "Description": "DevExpress Blazor Tabs allows you to implement tabbed layout and control an active tab from code. You can also use this component to emulate a Page control in your Blazor application."
       },
       {
         "Url": "TreeView",
@@ -172,14 +207,14 @@
         "Icon": "images/Tabs.svg",
         "IsNew": true,
         "Keywords": "Blazor, components, treeview, tree view, tree component, navigation, tree navigation, selection, node selection, hierarchical data binding, hierarchical databinding, binding to hierarchical data, hierarchical data source, hierarchy, nodes, display master-detail data, display master-detail object, display master-detail objects, devexpress, demo, sample, example",
-        "Description": ""
+        "Description": "DevExpress Blazor TreeView displays hierarchical data structures within a tree-like UI metaphor. The component supports data binding and master-detail relationships."
       },
       {
         "Url": "Pager",
         "Title": "Pager",
         "Icon": "images/Pager.svg",
         "Keywords": "blazor, components, pager, pages, pager component, pages component, devexpress, demo, sample, example",
-        "Description": ""
+        "Description": "DevExpress Blazor Pager enables data navigation and helps visualize a current position within a bound data source. The component allows you to set up the total number of pages and the number of visible page numbers."
       }
     ]
   }
