Demo meta tags update

--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/appsettings.json
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/appsettings.json
@@ -87,25 +87,25 @@
           {
             "Url": "PivotGrid",
             "Title": "Overview",
-            "Keywords": "Blazor, components, pivot grid, sorting, grouping, sub-totals, grand-totals, devexpress, demo, sample, example",
+            "Keywords": "Blazor, components, pivot grid, pivot table, sorting, grouping, sub-totals, grand-totals, devexpress, demo, sample, example",
             "Description": "DevExpress Blazor Pivot Grid summarizes data from the underlying data source and presents the results in cross-tabulated format. "
           },
           {
             "Url": "PivotGridTemplates",
             "Title": "Templates",
-            "Keywords": "Blazor, components, pivot grid, customization, cell templates, formatting, devexpress, demo, sample, example",
+            "Keywords": "Blazor, components, pivot grid, pivot table, customization, cell templates, formatting, devexpress, demo, sample, example",
             "Description": "DevExpress Blazor Pivot Grid allows you to use native Razor markup to define custom templates for grid fields."
           },
           {
             "Url": "PivotGridLargeDataBase",
             "Title": "Large Data Source",
-            "Keywords": "Blazor, components, pivot grid, data binding, entity framework bind, paging, devexpress, demo, sample, example",
+            "Keywords": "Blazor, components, pivot grid, pivot table, data binding, entity framework bind, paging, devexpress, demo, sample, example",
             "Description": "DevExpress Blazor Pivot Grid delivers high performance when the component is bound to a large data source."
           },
           {
             "Url": "PivotGridChartIntegration",
             "Title": "Chart Integration",
-            "Keywords": "Blazor, components, pivot grid, charts, pivot grid and chart integration, data visualization, devexpress, demo, sample, example",
+            "Keywords": "Blazor, components, pivot grid, pivot table, charts, pivot grid and chart integration, data visualization, devexpress, demo, sample, example",
             "Description": "The DevExpress Pivot Grid for Blazor can be easily integrated with DevExpress Charts for Blazor. This allows you to visualize grid's data on a chart."
           }
         ]
