Update Demo 3 for Blazor Preview 9

--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/BlazorDemo.ServerSide.csproj
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/BlazorDemo.ServerSide.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <LangVersion>7.3</LangVersion>
+    <!--<LangVersion>7.3</LangVersion>-->
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor" Version="0.3.0" />
+    <PackageReference Include="DevExpress.Blazor" Version="0.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0-preview4.19216.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0-preview4.19216.3" />
   </ItemGroup>
