--- a/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/BlazorDemo.ServerSide.csproj
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo.ServerSide/BlazorDemo.ServerSide.csproj
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="DevExpress.Blazor" Version="19.1.7.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0-preview4.19216.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0-preview4.19216.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
