--- a/demo/BlazorDemo.Wasm/BlazorDemo/BlazorDemo.NetStandard.csproj
+++ b/demo/BlazorDemo.Wasm/BlazorDemo/BlazorDemo.NetStandard.csproj
@@ -21,12 +21,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
-    <PackageReference Include="DevExtreme.AspNet.Data" Version="2.6.1" />
+    <PackageReference Include="DevExtreme.AspNet.Data" Version="2.7.2" />
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor" Version="20.2.3" />
-    <PackageReference Include="DevExpress.Document.Processor" Version="20.2.3" />
+    <PackageReference Include="DevExpress.Blazor" Version="20.2.4" />
+    <PackageReference Include="DevExpress.Data" Version="20.2.4" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Utils.cs" />
