--- a/demo/BlazorDemo.ServerSide/BlazorDemo/BlazorDemo.ServerSide.Core.csproj
+++ b/demo/BlazorDemo.ServerSide/BlazorDemo/BlazorDemo.ServerSide.Core.csproj
@@ -4,7 +4,8 @@
     <DxExtendStartupHost>False</DxExtendStartupHost>
     <Configurations>Debug;Release;VisualTests</Configurations>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <GenerateRuntimeConfigDevFile>true</GenerateRuntimeConfigDevFile>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputType>Library</OutputType>
    
     <RootNamespace>BlazorDemo</RootNamespace>
@@ -30,9 +31,9 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor.RichEdit" Version="21.2.4" />
-    <PackageReference Include="DevExpress.Blazor.Reporting" Version="21.2.4" />
-    <PackageReference Include="DevExpress.Win.Demos.Reporting" Version="21.2.4" />
+    <PackageReference Include="DevExpress.Blazor.RichEdit" Version="21.2.5" />
+    <PackageReference Include="DevExpress.Blazor.Reporting" Version="21.2.5" />
+    <PackageReference Include="DevExpress.Win.Demos.Reporting" Version="21.2.5" />
     
     
     
