--- a/demo/BlazorDemo.Wasm/BlazorDemo.Wasm.Client/BlazorDemo.Wasm.Client.csproj
+++ b/demo/BlazorDemo.Wasm/BlazorDemo.Wasm.Client/BlazorDemo.Wasm.Client.csproj
@@ -3,7 +3,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <EnableDefaultItems>False</EnableDefaultItems>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <GenerateRuntimeConfigDevFile>true</GenerateRuntimeConfigDevFile>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <IntermediateOutputPath>obj.WASM</IntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
@@ -19,7 +20,7 @@
     <ProjectReference Include="..\BlazorDemo\BlazorDemo.Wasm.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor" Version="21.2.4" />
+    <PackageReference Include="DevExpress.Blazor" Version="21.2.5" />
     
   </ItemGroup>
   <ItemGroup>
