--- a/demo/BlazorDemo.Wasm/BlazorDemo/BlazorDemo.Wasm.Core.csproj
+++ b/demo/BlazorDemo.Wasm/BlazorDemo/BlazorDemo.Wasm.Core.csproj
@@ -5,7 +5,8 @@
     <Configurations>Debug;Release;VisualTests</Configurations>
     <EnableDefaultItems>False</EnableDefaultItems>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <GenerateRuntimeConfigDevFile>true</GenerateRuntimeConfigDevFile>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AssemblyName>BlazorDemo</AssemblyName>
     <RootNamespace>BlazorDemo</RootNamespace>
     <OutputType>Library</OutputType>
@@ -21,7 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor" Version="21.2.4" />
+    <PackageReference Include="DevExpress.Blazor" Version="21.2.5" />
     
   </ItemGroup>
   <ItemGroup>
